kotlin-parser/src/test/semlang/validatorTests/fail/variableNames3.sem
function myStuff.myFunction(): Integer {
  let myVar3: Integer = Integer.plus(myVar1, myVar2)
  let myVar2: Integer = Integer."2"
  let myVar1: Integer = Integer."1"
  return myVar3
}
